# perplexica-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  setup_repo.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: API.md  SETUP.md
examples/: basic_usage.py  claude_desktop_config.json  mcp_test.py
src/perplexica_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_server.py
